--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.unity.addressables": "1.19.19",
     "com.unity.ads": "3.7.5",
+    "com.unity.assetbundlebrowser": "file:D:/ForUnity/AssetBundles-Browser-master",
     "com.unity.collab-proxy": "1.15.17",
     "com.unity.ide.rider": "3.0.14",
     "com.unity.ide.visualstudio": "2.0.15",
